Change stylesheet and script file references

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>MSR式箱庭ゲーム　Ver.4.6</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="Island.css">
 </head>
 <body>
 <div id="gameControls" style="margin-bottom: 1em;">
@@ -141,7 +141,8 @@
     </div>
 </div>
 <div id="log" style="margin-top:1em;"></div>
-<script src="js/main.js"></script></body></html>
+<script src="script.js"></script></body></html>
+
 
 
 
